<resources>
    <string name="app_name">NeuroNudge</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="full_name">Full Name</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="app_tagline">Your mental wellness companion</string>
</resources>
